...
            labelColor: AppColors.olive,
            unselectedLabelColor: AppColors.textMuted,
            indicatorColor: AppColors.olive,
            tabs: [
              Tab(text: 'Info'),
              Tab(text: 'Categorías'),
              Tab(text: 'Evaluaciones'),
              Tab(text: 'Miembros'),
            ],
          ),
        ),
        body: Container(
          decoration: BoxDecoration(
...
